fix: search page on mobile (#1266)
* fix: set search field min-width

* fix: make option keep size in wp, ensure good touch target

* fix: add hover state to closeButton

* make view language select smaller

* handle select overflow on small screens

* add button variant filter

* adjust button wrapper

* handle label in Select

* bump patch version

--- a/h5p-bildetema/src/components/SearchPage/SearchView/SearchView.module.scss
+++ b/h5p-bildetema/src/components/SearchPage/SearchView/SearchView.module.scss
@@ -21,17 +21,21 @@
 
   @include breakpoint-min($x-small) {
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
 .buttonWrapper {
   display: flex;
-  width: 100%;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
   justify-content: center;
-  gap: 0.5rem;
+  max-width: 100%;
 
-  @include breakpoint-min($x-small) {
-    gap: 1rem;
+  & > * {
+    max-width: 100%;
   }
 }
 
